syntax = "proto3";

option go_package = "github.com/njunwa1/fupi.tz/proto/golang/keygen";

message GenerateKeyRequest {
}

message GenerateKeyResponse {
  string shortUrl = 1;
}

service Keygen {
  rpc Generate(GenerateKeyRequest) returns (GenerateKeyResponse) {}
}